# small-apps

./: README.md
code-compte-game/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
code-compte-game/src/: app.html
code-compte-game/src/lib/: types.ts  utils.ts
code-compte-game/src/routes/: +layout.svelte  +page.svelte
horn-plans-remake/scraper/: data.json  main.py
page_collab/: .env  .gitignore  Cargo.toml  docker-compose.yml  dockerfile
page_collab/.bruno/: Playground.bru  bruno.json  collection.bru
page_collab/.bruno/Auth/: Already login.bru  Current user.bru  Login.bru  Register.bru
page_collab/.bruno/Pages/: Add.bru  Count.bru  Delete.bru  Get users.bru  Get.bru  List.bru  Remove.bru  Update.bru
page_collab/.bruno/User/: Count.bru  Get curent user pages.bru  Get pages.bru
page_collab/.bruno/User page/: Add.bru  Remove.bru
page_collab/.bruno/environments/: Local.bru
page_collab/.zed/: tasks.json
page_collab/config/: development.yaml  test.yaml
page_collab/examples/: playground.rs
page_collab/frontend/: .gitignore  Cargo.toml  README.md  biome.json  index.html  input.css  package.json  pnpm-lock.yaml  rsbuild.config.ts  svelte.config.js  tailwind.config.js  tailwind.config.ts  vite.config.ts
page_collab/frontend/public/: output.css
page_collab/frontend/shadcn/: Cargo.toml
page_collab/frontend/shadcn-docs/: Cargo.toml
page_collab/frontend/shadcn-docs/src/: card.rs
page_collab/frontend/shadcn/src/components/: label.rs  mod.rs  select.rs
page_collab/frontend/shadcn/src/components/card/: mod.rs
page_collab/frontend/shadcn/src/components/tabs/: mod.rs
page_collab/frontend/src/: 404.html  app.css  app.html  app.pcss  app.scss  hooks.ts  index.ts  lib.rs  main.rs
page_collab/frontend/src/api/: mod.rs
page_collab/frontend/src/components/: button.rs  input.rs  mod.rs
page_collab/frontend/src/lib/api/: auth.ts  index.ts  pages.ts  user.ts
page_collab/frontend/src/lib/components/: PageButton.svelte
page_collab/frontend/src/lib/components/editor/: Editor.svelte
page_collab/frontend/src/lib/components/ui/checkbox/: checkbox.svelte
page_collab/frontend/src/lib/components/ui/select/: select-item.svelte
page_collab/frontend/src/lib/components/ui/tabs/: tabs-list.svelte  tabs-trigger.svelte
page_collab/frontend/src/lib/store/: auth.ts  pages.ts
page_collab/frontend/src/pages/: home.rs
page_collab/frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  +page.ts  form-join.svelte  form-login.svelte  login-form.svelte  register-form.svelte
page_collab/frontend/src/routes/pages/: +page.server.ts  +page.svelte
page_collab/frontend/src/routes/pages/[id]/: +page.server.ts  +page.svelte  +page.ts
page_collab/frontend/src/routes/pages/new/: +page.server.ts  +page.svelte
page_collab/frontend/src/style/: supreme.scss
page_collab/migration/src/: lib.rs  m20240815_202832_pages.rs  m20240815_211017_user_pages.rs  m20240821_194613_add_users_avatar.rs
page_collab/shared/: Cargo.toml
page_collab/src/: app.rs  errors.rs  lib.rs
page_collab/src/controllers/: auth.rs  mod.rs  page.rs  user.rs  user_page.rs
page_collab/src/models/: mod.rs  pages.rs  user_pages.rs  users.rs
page_collab/src/tasks/: mod.rs  remove_users.rs
page_collab/src/views/: auth.rs  (+3 more)
(+24 files in other folders)
