[workspace]
resolver = "2"
members = ["shadcn", "shadcn-docs"]

[workspace.dependencies]

[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["Instelce <instelce@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shadcn = { path = "./shadcn" }
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
leptos_reactive = { version = "0.6.14", features = ["csr", "nightly"] }
leptos_lucide = "0.1.1"
leptos-use = "0.12.0"
styled = { version = "0.2.0", features = ["csr"] }
stylist = "0.13.0"
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
rand = "0.8.5"
tiny_id = "0.1.6"
stylers = "0.3.2"
dotenvy = "0.15.7"
thiserror = "1.0"

gloo-net = { version = "0.6.0", features = ["http"] }
leptos_query = { version = "0.5.3", features = ["csr"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }

shared = { path = "../shared" }
dotenvy_macro = "0.15.7"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }

[build-dependencies]
stylers = "0.3.2"

[lib]
# crate-type = ["rlib", "cdylib"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
