[package]
name = "shadcn"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_lucide = "0.1.1"
leptos-use = "0.12.0"
styled = { version = "0.2.0", features = ["csr"] }
stylist = "0.13.0"
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
rand = "0.8.5"
tiny_id = "0.1.6"
stylers = "0.3.2"
